# fetch-rs

./: .gitignore  Cargo.toml  README.md  screenshot.xcf  shell.nix
distro-logos/: fedora.txt  nixos.txt
src/: cfg.rs  info.rs  main.rs  out.rs  plugin.rs
